--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,4 +1,4 @@
-/* Default 
+/* Default
 ===================== */
 * {
   margin: 0;
@@ -14,10 +14,24 @@ html, body {
 }
 
 
-
 /* Nav
 ===================== */
+.main-header {
+  width: 100%;
+  background-color: #27ae60;
+  min-height: 200px;
 
+  h1 {
+    margin: 50px 0px 50px 0px;
+    text-align: center;
+  }
+}
+
+.nav-trigger {
+  padding: 10px 0px 0px 10px;
+  cursor: pointer;
+  font-size: 30px;
+}
 
 /* Grid
 ===================== */
@@ -28,4 +42,3 @@ html, body {
 @media screen and (min-width: 768px) {
 
 }
-
