--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,2 +1,7 @@
 $title-font: 'Noto Sans', sans-serif;
 $body-font: 'Arimo', sans-serif;
+
+$primary-color: #27ae60;
+$primary-color-dark: #19914c;
+$primary-color-light: #86c788;
+$accent-color: #ffc107;
