--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,5 +1,5 @@
-$title-font: 'Noto Sans', sans-serif;
-$body-font: 'Arimo', sans-serif;
+$title-font: 'Merriweather', serif;
+$body-font: 'Merriweather Sans', sans-serif;
 
 $primary-color: #27ae60;
 $primary-color-dark: #19914c;
