--- a/css/main.css
+++ b/css/main.css
@@ -17,14 +17,17 @@ html, body {
   background-color: #27ae60;
   min-height: 200px; }
   .main-header h1 {
-    padding: 50px 0px 50px 0;
+    padding: 50px 0px 45px 0;
     margin: 0;
     text-align: center; }
 
 .nav-trigger {
-  padding: 10px 0px 0px 10px;
+  padding: 10px 40px 10px 10px;
   cursor: pointer;
-  font-size: 30px; }
+  font-size: 30px;
+  background-color: rgba(139, 139, 139, 0.5);
+  border-radius: 5px;
+  border: 1px solid #545454; }
 
 .nav-hidden {
   display: none; }
@@ -56,7 +59,7 @@ html, body {
     left: 0;
     z-index: 2; }
   .menu-expanded a {
-    transition: all .15s;
+    transition: all .3s;
     text-decoration: none;
     color: #fff;
     font-size: 2em;
