--- a/css/main.css
+++ b/css/main.css
@@ -25,9 +25,9 @@ html, body {
   padding: 10px 40px 10px 10px;
   cursor: pointer;
   font-size: 30px;
-  background-color: rgba(139, 139, 139, 0.5);
+  background-color: rgba(139, 139, 139, 0.7);
   border-radius: 5px;
-  border: 1px solid #545454; }
+  border: 2px solid #ffc107; }
 
 .nav-hidden {
   display: none; }
@@ -77,9 +77,16 @@ html, body {
   color: #ffc107; }
 
 .title-area {
-  background-color: #F2F2F2; }
+  background-color: #F2F2F2;
+  padding: 30px 0 30px 0; }
   .title-area h1 {
     margin: 0; }
+
+.square {
+  background-color: blue;
+  max-width: 100%;
+  height: 300px;
+  margin: 30px 0 30px 0; }
 
 /* Grid
 ===================== */
