--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -32,9 +32,9 @@ html, body {
   padding: 10px 40px 10px 10px;
   cursor: pointer;
   font-size: 30px;
-  background-color: rgba(139, 139, 139, 0.5);
+  background-color: rgba(139, 139, 139, 0.7);
   border-radius: 5px;
-  border: 1px solid #545454;
+  border: 2px solid $accent-color;
 }
 
 .nav-hidden {
@@ -92,16 +92,27 @@ html, body {
 
 /* Content
 ===================== */
+
+// Title Area
 .content h1 span {
   color: $accent-color;
 }
 
 .title-area {
   background-color: #F2F2F2;
+  padding: 30px 0 30px 0;
 
   h1 {
     margin: 0;
   }
+}
+
+// Display Area
+.square {
+  background-color: blue;
+  max-width: 100%;
+  height: 300px;
+  margin: 30px 0 30px 0;
 }
 
 
