--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,7 +1,7 @@
 $title-font: 'Merriweather', serif;
 $body-font: 'Merriweather Sans', sans-serif;
 
-$primary-color: #27ae60;
-$primary-color-dark: #19914c;
-$primary-color-light: #86c788;
-$accent-color: #ffc107;
+$primary-color: #00BCD4;
+$primary-color-dark: #0097A7;
+$primary-color-light: #B2EBF2;
+$accent-color: #607D8B;
