--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,7 +1,7 @@
 $title-font: 'Merriweather', serif;
 $body-font: 'Merriweather Sans', sans-serif;
 
-$primary-color: #00BCD4;
-$primary-color-dark: #0097A7;
-$primary-color-light: #B2EBF2;
-$accent-color: #607D8B;
+$green-color: #0d8549;
+$yellow-color: #f9c11c;
+$red-color: #b2085d;
+$dark-color: #3a3d44;
