--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -18,8 +18,9 @@ html, body {
 ===================== */
 .main-header {
   width: 100%;
-  background-color: $primary-color;
+  background-color: $green-color;
   min-height: 200px;
+  text-align: center;
 
   h1 {
     padding: 80px 0px 45px 0;
@@ -32,9 +33,9 @@ html, body {
   padding: 10px 40px 10px 10px;
   cursor: pointer;
   font-size: 30px;
-  background-color: rgba(96, 125, 139, 0.6);
+  background-color: rgba(58, 61, 68, 0.4);
   border-radius: 0px; // Not sure
-  border: 2px solid $accent-color;
+  border: 2px solid $dark-color;
 }
 
 .nav-hidden {
@@ -82,7 +83,7 @@ html, body {
     font-family: $title-font;
 
     &:hover {
-      color: $accent-color;
+      color: $yellow-color;
       -moz-transition: .5s;
       -webkit-transition: .5s;
       transition: .5s;
@@ -90,12 +91,17 @@ html, body {
   }
 }
 
+.logo {
+  display: block;
+  padding: 50px 0px 50px 0px;
+}
+
 /* Content
 ===================== */
 
 // Title Area
 .content span {
-  color: $accent-color;
+  color: $red-color;
 }
 
 .content p {
@@ -120,6 +126,9 @@ html, body {
   height: 300px;
   margin: 30px 0 30px 0;
 }
+
+/* Footer
+===================== */
 
 
 /* Grid
@@ -148,7 +157,6 @@ html, body {
     width: 1170px;
   }
 }
-
 
 
 /* Media Queries
