Footer and form added

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -129,34 +129,22 @@ html, body {
 
 /* Footer
 ===================== */
+footer {
+  background-color: $red-color;
+  padding: 20px 0 20px 0;
+}
 
+label {
+  color: #fff;
+  font-size: 18px;
+}
+
+.form-control {
+  border-radius: 0px;
+}
 
 /* Grid
 ===================== */
-.container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-@media (min-width: 768px) {
-  .container {
-    width: 750px;
-  }
-}
-
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px;
-  }
-}
 
 
 /* Media Queries
