--- a/css/main.css
+++ b/css/main.css
@@ -100,23 +100,19 @@ html, body {
 
 /* Footer
 ===================== */
+footer {
+  background-color: #b2085d;
+  padding: 20px 0 20px 0; }
+
+label {
+  color: #fff;
+  font-size: 18px; }
+
+.form-control {
+  border-radius: 0px; }
+
 /* Grid
 ===================== */
-.container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto; }
-
-@media (min-width: 768px) {
-  .container {
-    width: 750px; } }
-@media (min-width: 992px) {
-  .container {
-    width: 970px; } }
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px; } }
 /* Media Queries
 ===================== */
 h1, h2, h3, h4, h5, h6 {
@@ -124,5 +120,57 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   font-family: "Merriweather Sans", sans-serif; }
+
+label {
+  font-family: "Merriweather Sans", sans-serif; }
+
+.btn {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  font-family: "Merriweather Sans", sans-serif;
+  text-decoration: none;
+  color: #fff;
+  background-color: #3a3d44;
+  border: 1px solid transparent;
+  padding: 0.5em 2em 0.5em 2em; }
+
+.btn-hover {
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s; }
+  .btn-hover:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #0d8549;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transform-origin: 0 50%;
+    transform-origin: 0 50%;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out; }
+
+.btn-hover:hover:before, .btn-hover:focus:before,
+.btn-hover:active:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1); }
 
 /*# sourceMappingURL=main.css.map */
