--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -127,6 +127,15 @@ html, body {
   margin: 30px 0 30px 0;
 }
 
+.display-area {
+  padding: 50px 0 35px 0;
+  min-height: 600px;
+
+    img {
+      margin-bottom: 15px;
+    }
+}
+
 /* Footer
 ===================== */
 footer {
