--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ html, body {
 ===================== */
 .main-header {
   width: 100%;
-  background-color: #0d8549;
+  background-color: #3a3d44;
   min-height: 200px;
   text-align: center; }
   .main-header h1 {
@@ -26,7 +26,7 @@ html, body {
   padding: 10px 40px 10px 10px;
   cursor: pointer;
   font-size: 30px;
-  background-color: rgba(58, 61, 68, 0.4);
+  background-color: rgba(208, 208, 208, 0.6);
   border-radius: 0px;
   border: 2px solid #3a3d44; }
 
@@ -102,12 +102,18 @@ html, body {
   padding: 40px 0 35px 0;
   min-height: 550px; }
   .display-area img {
-    margin-bottom: 15px; }
+    margin-bottom: 15px;
+    transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out; }
+    .display-area img:hover {
+      transform: scale(1.05); }
 
 /* Footer
 ===================== */
 footer {
-  background-color: #b2085d;
+  background-color: #3a3d44;
   padding: 20px 0 20px 0; }
 
 label {
@@ -137,7 +143,7 @@ label {
   font-family: "Merriweather Sans", sans-serif;
   text-decoration: none;
   color: #fff;
-  background-color: #3a3d44;
+  background-color: #b2085d;
   border: 1px solid transparent;
   padding: 0.5em 2em 0.5em 2em; }
 
@@ -161,7 +167,7 @@ label {
     left: 0;
     right: 0;
     bottom: 0;
-    background: #0d8549;
+    background: #f9c11c;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
     -webkit-transform-origin: 0 50%;
