--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -4,8 +4,8 @@
   overflow: hidden;
   font-family: $body-font;
   text-decoration: none;
-  color: #fff;
-  background-color: $red-color;
+  color: #000000;
+  background-color: #ffffff;
   border: 1px solid transparent;
   padding: 0.5em 2em 0.5em 2em;
 }
