--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -153,7 +153,7 @@ footer {
 
 label {
   color: #fff;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 footer h2 {
@@ -176,7 +176,7 @@ footer ul {
   list-style-type: none;
   text-align: center;
   font-size: 18px;
-  margin-top: 30px;
+  margin-top: 50px;
 
   a {
     font-family: $body-font;
@@ -211,3 +211,21 @@ footer ul {
 
 /* Media Queries
 ===================== */
+
+
+/* Contact Page
+===================== */
+
+.profile-img {
+  display: block;
+  margin: 30px auto 30px auto;
+  border-radius: 100px;
+}
+
+.profile-area {
+  text-align: center;
+
+  h1 {
+    color: $red-color;
+  }
+}
