--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -104,7 +104,7 @@ html, body {
   color: $red-color;
 }
 
-.content p {
+.title-area p {
   margin-top: 30px;
   font-size: 18px;
 }
@@ -223,9 +223,13 @@ footer ul {
 }
 
 .profile-area {
-  text-align: center;
+  padding-bottom: 30px;
 
   h1 {
     color: $red-color;
+    text-align: center;
+  }
+  h2 {
+    margin-top: 20px;
   }
 }
