--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -233,3 +233,20 @@ footer ul {
     margin-top: 20px;
   }
 }
+
+/* Work Page
+===================== */
+.resume {
+
+  h2 {
+    color: $red-color;
+  }
+  h3 {
+    margin: 20px 0 10px 0;
+    color: $red-color;
+  }
+
+  ul {
+    margin-bottom: 20px;
+  }
+}
